--- a/main.html
+++ b/main.html
@@ -94,19 +94,19 @@
             <div class="slide_wrap" style="position:relative;">
                 <div class="swiper-container_top">
                     <div class="swiper-wrapper">
-                      <div class="swiper-slide mt_img" style="background-image:url('images/main/nature-111.jpg?ver=2');background-repeat:no-repeat;background-size:cover;width:100%;height:963px;">
+                      <div class="swiper-slide mt_img" style="background-image:url('images/main/nature-111.jpg');background-repeat:no-repeat;background-size:cover;width:100%;height:963px;">
                         <div class="mt_img_text">
                             <p>전국 6500여 매장 3만여<br />골프존 시뮬레이터&스크린</p>
                             <p>골프존 인프라는 여러분의 광고를<br />보다 빠르고 효과적으로 확산시켜드립니다.</p>
                         </div>
                       </div>
-                      <div class="swiper-slide mt_img" style="background-image:url('images/main/nature-222.jpg?ver=2');background-repeat:no-repeat;background-size:cover;width:100%;height:963px;">
+                      <div class="swiper-slide mt_img" style="background-image:url('images/main/nature-222.jpg');background-repeat:no-repeat;background-size:cover;width:100%;height:963px;">
                         <div class="mt_img_text">
-                            <p>강한 구매력, 3050 타겟<br />이용횟수 매일<br>평균 215,839회(RND) <em style="font-size: 16px;">*2021년 기준</em></p>
+                            <p>경제력이 높은 3050 타겟<br />이용횟수 매일 164,383 라운드</p>
                             <p>골프존의 프리미엄 타겟은 언제든<br />여러분의 제품과 서비스를 경험할 준비가 되어있습니다.</p>
                         </div>
                       </div>
-                      <div class="swiper-slide mt_img" style="background-image:url('images/main/nature-333.jpg?ver=2');background-repeat:no-repeat;background-size:cover;width:100%;height:963px;">
+                      <div class="swiper-slide mt_img" style="background-image:url('images/main/nature-333.jpg');background-repeat:no-repeat;background-size:cover;width:100%;height:963px;">
                         <div class="mt_img_text">
                             <p>업계 최고 수준의 몰입감을 제공,<br />성장하고 있는 골프존</p>
                             <p>한정된 공간에서 대형화면을 통해<br />게임의 중요한 순간마다 몰입감 높은 광고를 제공합니다.</p>
@@ -146,13 +146,11 @@
                     <div class="ad6_list">
                         <div>
                             <a href="sub/marketingsolution/marketing.html#e1" class="innerborder">
-                                <img src="images/main/img_ad1.jpg" alt="신한금융투자" style="max-width:360px;" />
+                                <img src="images/main/img_ad1.png" alt="재규어 랜드로버" />
                             </a>
-                            <h3>신한금융투자</h3>
-                            <p>#기업 PR</p>
-                            <p>#기업네이밍 코스 제작</p>
-                            <p>#기업 코스 내 이벤트 진행</p>
-                            <p># 글로벌 대회 진행</p>
+                            <h3>재규어 랜드로버</h3>
+                            <p>#CRM</p>
+                            <p>#LMS</p>
                         </div>
                         <div>
                             <a href="sub/marketingsolution/marketing.html#e1" class="innerborder">
@@ -231,19 +229,19 @@
                             <div class="swiper-container">
                                 <div class="swiper-wrapper">
                                   <div class="swiper-slide" style="width:805px">
-                                    <img src="images/main/img_ad_slide1.jpg" alt="img1" style="width:100%" />
+                                    <img src="images/main/img_ad_slide1.png" alt="img1" style="width:100%" />
                                     <p>전 or 후반홀 시작시 15초 영상<br /><b><span>전후반 홀 입장 동영상 광고</span></b></p>
                                   </div>
                                   <div class="swiper-slide" style="width:805px">
-                                    <img src="images/main/img_ad_slide2.jpg" alt="img1" style="width:100%" />
-                                    <p>스테디 셀러<br /><b><span>연습장 대형 광고 보드</span></b></p>
+                                    <img src="images/main/img_ad_slide2.png" alt="img1" style="width:100%" />
+                                    <p>2020년 2월, 올해 전 기간 완판<br /><b><span>연습장 대형 광고 보드</span></b></p>
                                   </div>
                                   <div class="swiper-slide" style="width:805px">
-                                    <img src="images/main/img_ad_slide3.jpg" alt="img1"  style="width:100%" />
-                                    <p>최고 수준의 노출량<br /><b><span>나의스윙모습 스킨 광고</span></b></p>
+                                    <img src="images/main/img_ad_slide3.png" alt="img1"  style="width:100%" />
+                                    <p>예상 노출량 최고, 월 평균 2,300만 VIEW<br /><b><span>나의스윙모습 스킨 광고</span></b></p>
                                   </div>
                                   <div class="swiper-slide" style="width:805px">
-                                    <img src="images/main/img_ad_slide4.jpg" alt="img1"  style="width:100%" />
+                                    <img src="images/main/img_ad_slide4.png" alt="img1"  style="width:100%" />
                                     <p>업계 유일 동영상 6초 + 이미지 4초<br /><b><span>홀 이동 동영상 광고세트</span></b></p>
                                   </div>
                                 </div>
