--- a/sub/eventship/event.html
+++ b/sub/eventship/event.html
@@ -134,14 +134,9 @@
                         <div class="practice_info_wrap">
                             <dl>
                                 <dt>1</dt>
-                                <dd>
-                                    티샷 시 페어웨이에 등장하는<br />
-                                    브랜딩 된 풍선(오브젝트) N회 출현,<br />
-                                    N번 맞히면 미션 성공 <br />
-                                    <span style="font-size:15px">*이벤트 발동/ 맞히는 횟수 설정 가능<br />
-                                    출현 ㅣ 17회 이상 초과할 수 없음<br />
-                                    성공 ㅣ 출현 횟수를 초과할 수 없음</span>
-                                </dd>
+                                <dd>티샷 시 페어웨이에 등장하는<br />
+                                    브랜딩 된 풍선(오브젝트) 6회 출현,<br />
+                                    3번 맞히면 미션 성공 <br /><span style="font-size:15px">*이벤트 발동/ 맞히는 횟수 설정 가능</span></dd>
                             </dl>
                             <dl>
                                 <dt>2</dt>
@@ -161,7 +156,7 @@
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>광고 예상 노출량<br /><span>1,200만회</span></dd>
+                                <dd>광고 예상 노출량<br /><span>1,200만회<br /><span style="font-size:15px">*이벤트 CC 1개 추가 시 노출량 2배</span></span></dd>
                             </dl>
                             <dl>
                                 <dt>6</dt>
@@ -169,7 +164,7 @@
                                     경품은 광고주 제공</span></dd>
                             </dl>
                         </div>
-                        <!-- <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
+                        <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
                         <div class="event_list_table_wrap">
                             <table>
                                 <colgroup>
@@ -226,7 +221,7 @@
                                     <td colspan="3"><span>전면 배너 협의</span></td>
                                 </tr>
                             </table>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
                 <!--// tab1 -->
@@ -239,31 +234,28 @@
                         <div class="practice_info_wrap">
                             <dl>
                                 <dt>1</dt>
-                                <dd>티샷시 페어웨이 바닥에 브랜딩 된<br />
-                                브랜드존 N회 출현<br />
-                                볼이 N번 안착하면 미션 성공<br />
-                                <span style="font-size:15px">*이벤트 발동/ 맞히는 횟수 설정 가능<br />
-                                출현 ㅣ 17회 이상 초과할 수 없음<br />
-                                성공 ㅣ 출현 횟수를 초과할 수 없음</span></dd>
+                                <dd>티샷시 페어웨이 바닥에 브랜딩 된<br />브랜드존 6회 출현 <br />
+                                    볼이 3번 안착하면 미션 성공 <br />
+                                   <span style="font-size:15px">*이벤트 발동/맞히는 횟수 설정 가능<br />
+                                    미션 달성시 골프존앱 선물 상자를 통하여 선물 지급
+                                    </span></dd>
                             </dl>
                             <dl>
                                 <dt>2</dt>
-                                <dd>예상 참여 횟수 (라운드 수)<br />
-                                    <span>12만~15만여 회</span></dd>
+                                <dd>미션 달성시 골프존앱 선물 상자를 통하여 선물 지급</dd>
                             </dl>
                             <dl>
                                 <dt>3</dt>
-                                <dd>미션 달성 시 골프존 앱 <br />
-                                    선물 상자를 통하여<br />
-                                    선물 지급</dd>
+                                <dd>광고 예상 노출량 : 약 1,200만회 <br />
+                                    <span style="font-size:15px">*이벤트CC 1개 추가시 노출량 2배</span>
                             </dl>
                             <dl>
                                 <dt>4</dt>
-                                <dd>판매단가 : 3,000만원 (1개CC, 1개월) <br /><span style="font-size:15px">*CC 1개 추가비용 1,000만원</span></dd>
+                                <dd>예상 참여 횟수(라운드 수) : 12만~15만여 회</dd>
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>광고 예상 노출량<br /><span>1,200만회</span></dd>
+                                <dd>판매단가 : 3,000만원 (1개CC, 1개월) <br /><span style="font-size:15px">*CC 1개 추가비용 1,000만원</span></dd>
                             </dl>
                             <dl>
                                 <dt>6</dt>
@@ -271,7 +263,7 @@
                                     경품은 광고주 제공</span></dd>
                             </dl>
                         </div>
-                        <!-- <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
+                        <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
                         <div class="event_list_table_wrap">
                             <table>
                                 <colgroup>
@@ -329,7 +321,7 @@
                                     <td colspan="3"><span>전면 배너 협의</span></td>
                                 </tr>
                             </table>
-                        </div> -->
+                        </div>
                     </div>
                 </div><!--// tab2 -->
                 <div id="tab3" class="tab_content">
@@ -350,22 +342,21 @@
                             </dl>
                             <dl>
                                 <dt>2</dt>
-                                <dd>예상 참여 횟수 (라운드 수)<br />
-                                    <span>12만~15만여 회</span></dd>
+                                <dd>미션 달성시 골프존앱 선물 상자를 통하여 선물 지급
+                                </dd>
                             </dl>
                             <dl>
                                 <dt>3</dt>
-                                <dd>미션 달성 시 골프존 앱 <br />
-                                    선물 상자를 통하여<br />
-                                    선물 지급</dd>
+                                <dd>광고 예상 노출량 : 약 1,200만회 <br />
+                                    <span style="font-size:15px">*이벤트CC 1개 추가시 노출량 2배</span>
                             </dl>
                             <dl>
                                 <dt>4</dt>
-                                <dd>판매단가 : 5,000만원 (15개CC, 1개월)</dd>
+                                <dd>예상 참여 횟수(라운드 수) : 12만~15만여 회</dd>
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>광고 예상 노출량<br /><span>1,200만회</span></dd>
+                                <dd>판매단가 : 3,000만원 (1개CC, 1개월) <br /><span style="font-size:15px">*CC 1개 추가비용 1,000만원</span></dd>
                             </dl>
                             <dl>
                                 <dt>6</dt>
@@ -373,7 +364,7 @@
                                     경품은 광고주 제공</span></dd>
                             </dl>
                         </div>
-                        <!-- <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
+                        <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
                         <div class="event_list_table_wrap">
                             <table>
                                 <colgroup>
@@ -431,7 +422,7 @@
                                     <td colspan="3">전면 배너 협의</td>
                                 </tr>
                             </table>
-                        </div> -->
+                        </div>
                     </div>
                 </div><!--// tab3 -->
                 <div id="tab4" class="tab_content">
@@ -457,7 +448,8 @@
                             </dl>
                             <dl>
                                 <dt>3</dt>
-                                <dd>광고 예상 노출량<br /><span>1,200만회</span><br><span style="font-size:15px">*이벤트CC 1개 추가시 노출량 2배</span></dd>
+                                <dd>광고 예상 노출량 : 약 1,200만회 <br />
+                                    <span style="font-size:15px">*이벤트CC 1개 추가시 노출량 2배</span>
                             </dl>
                             <dl>
                                 <dt>4</dt>
@@ -473,7 +465,7 @@
                                     경품은 광고주 제공</span></dd>
                             </dl>
                         </div>
-                        <!-- <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
+                        <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
                         <div class="event_list_table_wrap">
                             <table>
                                 <colgroup>
@@ -530,7 +522,7 @@
                                     <td colspan="3">전면 배너 협의</td>
                                 </tr>
                             </table>
-                        </div> -->
+                        </div>
                     </div>
                 </div><!--// tab4 -->
                 <div id="tab5" class="tab_content">
@@ -551,23 +543,21 @@
                             </dl>
                             <dl>
                                 <dt>2</dt>
-                                <dd>예상 참여 횟수 (라운드 수)<br />
-                                    <span>12만~15만여 회</span></dd>
+                                <dd>미션 달성시 골프존앱 선물 상자를 통하여 선물 지급
+                                </dd>
                             </dl>
                             <dl>
                                 <dt>3</dt>
-                                <dd>미션 달성 시 골프존 앱 <br />
-                                    선물 상자를 통하여<br />
-                                    선물 지급</dd>
+                                <dd>광고 예상 노출량 : 약 1,200만회 <br />
+                                    <span style="font-size:15px">*이벤트CC 1개 추가시 노출량 2배</span>
                             </dl>
                             <dl>
                                 <dt>4</dt>
-                                <dd>판매단가<br /><span>5,000만원 (15개CC, 1개월)<br />
-                                    <span style="font-size:15px">*CC 1개 추가비용 1,000만원</span></span></dd>
+                                <dd>예상 참여 횟수(라운드 수) : 12만~15만여 회</dd>
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>광고 예상 노출량 : 약 1,200만회</span>
+                                <dd>판매단가 : 5,000만원 (15개CC, 1개월) <br /><span style="font-size:15px">*CC 1개 추가비용 1,000 만원</span></dd>
                             </dl>
                             <dl>
                                 <dt>6</dt>
@@ -575,7 +565,7 @@
                                     경품은 광고주 제공</span></dd>
                             </dl>
                         </div>
-                        <!-- <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
+                        <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
                         <div class="event_list_table_wrap">
                             <table>
                                 <colgroup>
@@ -633,7 +623,7 @@
                                     <td colspan="3"><span>전면 배너 협의</span></td>
                                 </tr>
                             </table>
-                        </div> -->
+                        </div>
                     </div>
                 </div><!--// tab5 -->
                 <div id="tab6" class="tab_content">
@@ -652,19 +642,17 @@
                             </dl>
                             <dl>
                                 <dt>2</dt>
-                                <dd>광고 예상 노출량<br /><span>20,000만회</span></dd>
+                                <dd>광고 예상 노출량 : 약 20,000만회 <br />
                                     <!--<span style="font-size:15px">*이벤트CC 1개 추가시 노출량 2배</span>-->
                             </dl>
                             <dl>
                                 <dt>3</dt>
-                                <dd>
-                                    예상 참여 횟수 (라운드 수)<br />
-                                    <span>60만여 회 + α</span><br />
-                                    <span style="font-size:15px"> [자세한 내용은 골프존 광고전문가에게 문의해 주세요]</span>
+                                <dd>예상 참여 횟수(라운드 수) : 60만여 회 + α<br /><span style="font-size:15px"> [자세한 내용은 골프존 광고전문가에게 문의해 주세요]
+                                </span>
                                 </dd>
                             </dl>
                         </div>
-                        <!-- <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
+                        <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
                         <div class="event_list_table_wrap">
                             <table>
                                 <colgroup>
@@ -721,7 +709,7 @@
                                     <td colspan="3"><span>전면 배너 협의</span></td>
                                 </tr>
                             </table>
-                        </div> -->
+                        </div>
                     </div>
                 </div><!--// tab5 -->
             </div>
