--- a/sub/golfzon/app.html
+++ b/sub/golfzon/app.html
@@ -80,15 +80,13 @@
                 <div class="sub_tab_menu">
                     <ul>
                         <li data-id="tab1" class="on">전면 배너</li>
-                        <li data-id="tab2">홈 메인 중앙</li>
-                        <li data-id="tab3">스크린 메인 중앙</li>
-                        <li data-id="tab4">스크린 로그인 스킨</li>
-                        <li data-id="tab5">이벤트 리스트</li>
-                        <li data-id="tab6">이벤트 페이지</li>
+                        <li data-id="tab2">메인 중앙</li>
+                        <li data-id="tab3">이벤트 리스트</li>
+                        <li data-id="tab4">이벤트 페이지</li>
                     </ul>
                 </div>
                 <style>
-                    .sub_tab_menu li{line-height:24px;float:left;display:inline-block;width:16.66%;text-align:center;border-top:1px solid #dbdbdb;border-bottom:1px solid #dbdbdb;border-right:1px solid #dbdbdb;padding:30px 0;font-size:18px;cursor: pointer;color:#222;box-sizing: border-box;-moz-box-sizing: border-box;-webkit-box-sizing: border-box;-o-box-sizing: border-box;}
+                    .sub_tab_menu li{line-height:24px;float:left;display:inline-block;width:24.5%;text-align:center;border-top:1px solid #dbdbdb;border-bottom:1px solid #dbdbdb;border-right:1px solid #dbdbdb;padding:30px 0;font-size:18px;cursor: pointer;color:#222}
                     .tab1_content{margin-top:85px}
                     .practice_info_wrap{width:935px;margin:90px auto 0 auto}
                     .practice_info_wrap dl{width:33%;text-align:center;padding:0;border-right:1px solid #d7dde9;height:50px;padding:20px 0}
@@ -114,7 +112,7 @@
                 <!--// tab1 -->
                 <div id="tab2" class="tab_content">
                     <div class="tab1_content">
-                        <h3>홈 메인 중앙</h3>
+                        <h3>메인 중앙</h3>
                         <div class="movie_wrap" style="overflow:hidden;text-align:center;height:auto">
                             <img src="../../images/sub/img_golfzon_10.png" alt="메인 중앙" />
                         </div>
@@ -127,9 +125,9 @@
                 </div><!--// tab2 -->
                 <div id="tab3" class="tab_content">
                     <div class="tab1_content">
-                        <h3>스크린 메인 중앙</h3>
+                        <h3>이벤트 리스트</h3>
                         <div class="movie_wrap" style="overflow:hidden;text-align:center;height:auto">
-                            <img src="../../images/sub/img_golfzon_11.png" alt="스크린 메인 중앙" />
+                            <img src="../../images/sub/img_golfzon_11.png" alt="이벤트 리스트" />
                         </div>
                         <div class="practice_info_wrap" style="width:100%">
                             <dl style="width:100%">
@@ -140,35 +138,9 @@
                 </div><!--// tab3 -->
                 <div id="tab4" class="tab_content">
                     <div class="tab1_content">
-                        <h3>스크린 로그인 스킨</h3>
-                        <div class="movie_wrap" style="overflow:hidden;text-align:center;height:auto">
-                            <img src="../../images/sub/img_golfzon_12.png" alt="스크린 로그인 스킨" />
-                        </div>
-                        <div class="practice_info_wrap" style="width:100%">
-                            <dl style="width:100%">
-                                <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />이벤트/대회 스폰서십 진행시 서비스 제공</dt>
-                            </dl>
-                        </div>
-                    </div>
-                </div><!--// tab4 -->
-                <div id="tab5" class="tab_content">
-                    <div class="tab1_content">
                         <h3>이벤트 페이지</h3>
                         <div class="movie_wrap" style="overflow:hidden;text-align:center;height:auto">
-                            <img src="../../images/sub/img_golfzon_13.png" alt="이벤트 페이지" />
-                        </div>
-                        <div class="practice_info_wrap" style="width:100%">
-                            <dl style="width:100%">
-                                <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />이벤트/대회 스폰서십 진행시 서비스 제공</dt>
-                            </dl>
-                        </div>
-                    </div>
-                </div><!--// tab4 -->
-                <div id="tab6" class="tab_content">
-                    <div class="tab1_content">
-                        <h3>이벤트 페이지</h3>
-                        <div class="movie_wrap" style="overflow:hidden;text-align:center;height:auto">
-                            <img src="../../images/sub/img_golfzon_14.png" alt="이벤트 페이지" />
+                            <img src="../../images/sub/img_golfzon_12.png" alt="이벤트 페이지" />
                         </div>
                         <div class="practice_info_wrap" style="width:100%">
                             <dl style="width:100%">
