--- a/sub/golfzon/web.html
+++ b/sub/golfzon/web.html
@@ -113,8 +113,7 @@
                                 <dd>5,000</dd>
                             </dl>
                             <dl>
-                                <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />패키지 판매(4주 기준)</dt>
-                                <dd>정상단가 ㅣ 1,500,000원(노출량에 따라 상이)</dd>
+                                <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />패키지 판매</dt>
                             </dl>
                             <dl>
                                 <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" /> 이벤트/대회 스폰서십<br /><span>진행시 서비스 제공</span></dt>
@@ -135,8 +134,7 @@
                                 <dd>3,000</dd>
                             </dl>
                             <dl>
-                                <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />패키지 판매(4주 기준)</dt>
-                                <dd>정상단가 ㅣ 950,000원(노출량에 따라 상이)</dd>
+                                <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />패키지 판매</dt>
                             </dl>
                             <dl>
                                 <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" /> 이벤트/대회 스폰서십<br /><span>진행시 서비스 제공</span></dt>
@@ -155,7 +153,7 @@
                                 <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />300만원 / 2주</dt>
                             </dl>
                             <dl>
-                                <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />패키지 판매(4주 기준)</dt>
+                                <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />패키지 판매</dt>
                             </dl>
                             <dl>
                                 <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />이벤트/대회 스폰서십<br /><span>진행시 서비스 제공</span></dt>
@@ -175,8 +173,7 @@
                                 <dd>2,500</dd>
                             </dl>
                             <dl>
-                                <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />패키지 판매(4주 기준)</dt>
-                                <dd>정상단가 ㅣ 1,250,000원(노출량에 따라 상이)</dd>
+                                <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />패키지 판매</dt>
                             </dl>
                             <dl>
                                 <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />이벤트/대회 스폰서십<br /><span>진행시 서비스 제공</span></dt>
@@ -195,7 +192,7 @@
                                 <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />독점 500만원 / 1주</dt>
                             </dl>
                             <dl>
-                                <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />패키지 판매(4주 기준)</dt>
+                                <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />패키지 판매</dt>
                             </dl>
                             <dl>
                                 <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />이벤트/대회 스폰서십<br /><span>진행시 서비스 제공</span></dt>
