--- a/sub/marketingsolution/marketing.html
+++ b/sub/marketingsolution/marketing.html
@@ -95,8 +95,8 @@
                         <div class="marketing cont2" id="e1">
                             <img src="../../images/sub/img_marketing_2.png" />
                             <div class="marketing_info_text">
-                                <h2>신한금융투자</h2>
-                                <p>골프존 프리미엄 회원 타겟<br>좋은 세상을 만들기 위해 옳은 일을 하고자 하는 <br>신한금융투자만의 수수료 평생 혜택이라는 강력한 홍보</p>
+                                <h2>재규어 랜드로버</h2>
+                                <p>골프존 프리미엄 회원 타겟, 단독 시승<br />프로모션을 통한 강력한 퍼포먼스, 강력한 홍보</p>
                                 <span>MORE</span>
                             </div>
                         </div>
@@ -316,6 +316,10 @@
                                     <img src="../../images/sub/img_marketing_pop_slide_3.png" alt="" />
                                 </div>
                             </div>
+                            <div class="pop_cs">
+                                <p>커뮤니케이션 담당자<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                    제휴사업팀 오민선 프로 <a href="mailto:minsun0325@golfzon.com">minsun0325@golfzon.com</a></span></p>
+                            </div>
                         </div>
                     </div><!--//cont1-->   
                     <div class="pop_cont pop_cont2">
@@ -324,38 +328,38 @@
                                 <img src="../../images/sub/img_pop_close.png" alt="닫기" />
                             </div>
                             <div style="clear:both;">
-                                <h1>신한금융투자</h1>
-                                <h2>골프존 프리미엄 회원 타겟<br>
-                                좋은 세상을 만들기 위해 옳은 일을 하고자 하는<br>신한금융투자만의 수수료 평생 혜택이라는 강력한 홍보</h2>
-                                <p class="pop_text">#기업 PR&nbsp;&nbsp;#기업네이밍 코스 제작&nbsp;&nbsp;#기업 코스 내 이벤트 진행&nbsp;&nbsp;#글로벌 대회 진행</p>
+                                <h1>재규어 랜드로버</h1>
+                                <h2>골프존 프리미엄 회원 타겟<br />단독 시승 프로모션을 통한 강력한 퍼포먼스, 강력한 홍보</h2>
+                                <p class="pop_text">#시승행사&nbsp;&nbsp;#CRM&nbsp;&nbsp;#LMS홍보</p>
                                 <div class="pop_info_img">
-                                    <img src="../../images/sub/img_marketing_pop_2.png" style="width: 561px" alt="" />
+                                    <img src="../../images/sub/img_marketing_pop_2.png" alt="" />
                                 </div>
                                 <div class="pop_text_list">
                                     <dl style="margin-top:0">
                                         <dt>· 캠페인 배경</dt>
-                                        <dd style="margin-top:-8px">다양하고 특별한 혜택으로 가득한 신한금융투자, <br>
-                                            특별한 혜택을 받을 수 있도록 MZ고객 대상 콘텐츠 구성 및 이벤트를 진행하였습니다.
+                                        <dd style="margin-top:-8px">다양하고 특별한 혜택으로 가득한 재규어 파이낸스 프로그램,<br />
+                                            특별한 혜택을 받을 수 있도록 골프존 프리미엄 회원 대상 ‘CRM’을 진행하였습니다.
                                         </dd>
                                     </dl>
                                     <dl>
                                         <dt>· 캠페인 진행사례</dt>
-                                        <dd style="margin-top:-8px">
-                                            신한금융투자만을 위한 코스 설계<br>
-                                            이벤트 내 다양한 경품 증정<br>
-                                            No.1 골프정보 사이트 골프존닷컴을 통한 홍보와 동시에<br>
-                                            골프존 회원 대상 스페셜 친구를 통해 홍보 및 타겟의 반응을 이끌어 낼 수 있었습니다.
+                                        <dd style="margin-top:-8px">재규어랜드로버만의 시승행사 프로모션,<br />
+                                            No.1 골프정보 사이트 골프존닷컴을 통한 홍보와 동시에 <br />
+                                            골프존 회원 대상 LMS 홍보하여 타겟의 반응을 이끌어 낼 수 있었습니다
                                             <p style="margin-top:30px"><b>
-                                            - 골프존 프리미엄 회원 40만명 대상 홍보<br>
-                                            - 이벤트 참여 고객 대상 경품 증정 이벤트
-                                            </b></p>
+                                                - 골프존 프리미엄 회원 40만명 대상 시승행사 LMS 홍보<br />
+                                                - 시승행사 참여 고객 대상 경품 증정 이벤트
+                                            </b>
                                             </p>
                                         </dd>
                                     </dl>
                                     <dl>
                                         <dt>· 주요성과와 인사이트</dt>
-                                        <dd style="margin-top:-8px">
-                                            신한금융투자 코스 설계
+                                        <dd>
+                                            <div class="pop_circle">
+                                                <div>40만</div>
+                                                <p>LMS 홍보</p>
+                                            </div>
                                         </dd>
                                     </dl>
                                     
@@ -402,6 +406,10 @@
                                 <div style="margin-top:65px;text-align:center;">
                                     <img src="../../images/sub/img_marketing_pop_slide_4.png" alt="" />
                                 </div>
+                            </div>
+                            <div class="pop_cs">
+                                <p>커뮤니케이션 담당자<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                    제휴사업팀 오민선 프로 <a href="mailto:minsun0325@golfzon.com">minsun0325@golfzon.com</a></span></p>
                             </div>
                         </div>
                     </div><!--//cont2-->
@@ -483,6 +491,10 @@
                                     <img src="../../images/sub/img_marketing_pop_slide_7.png" alt="" />
                                 </div>
                             </div>
+                            <div class="pop_cs">
+                                <p>커뮤니케이션 담당자<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                    제휴사업팀 김홍기 프로 <a href="mailto:hongki@golfzon.com">hongki@golfzon.com</a></span></p>
+                            </div>
                         </div>
                     </div><!--//cont3-->   
                     <div class="pop_cont pop_cont4">
@@ -542,6 +554,10 @@
                                 <div style="margin-top:85px;text-align:center;">
                                     <img src="../../images/sub/img_marketing_pop_slide_8.png" alt="" />
                                 </div>
+                            </div>
+                            <div class="pop_cs">
+                                <p>커뮤니케이션 담당자<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                    제휴사업팀 이준희 프로 프로 <a href="mailto:ljh@golfzon.com">ljh@golfzon.com</a></span></p>
                             </div>
                         </div>
                     </div><!--//cont4-->
@@ -620,6 +636,10 @@
                                             });
                                         })
                                     </script>
+                            </div>
+                            <div class="pop_cs">
+                                <p>커뮤니케이션 담당자<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                    제휴사업팀 오태곤 프로 <a href="mailto:welldone82@golfzon.com">welldone82@golfzon.com</a></span></p>
                             </div>
                         </div>
                     </div><!--//cont5-->   
@@ -706,6 +726,10 @@
                                     </script>
 
                             </div>
+                            <div class="pop_cs">
+                                <p>커뮤니케이션 담당자<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                    제휴사업팀 이준희 프로 <a href="mailto:ljh@golfzon.com">ljh@golfzon.com</a></span></p>
+                            </div>
                         </div>
                     </div><!--//cont6-->   
                     <div class="pop_cont pop_cont7">
@@ -780,6 +804,10 @@
                                         })
                                     </script>
 
+                            </div>
+                            <div class="pop_cs">
+                                <p>커뮤니케이션 담당자<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                    제휴사업팀 오민선 프로 <a href="mailto:minsun0325@golfzon.com">minsun0325@golfzon.com</a></span></p>
                             </div>
                         </div>
                     </div><!--//cont6--> 
@@ -861,6 +889,10 @@
                                         })
                                     </script>
 
+                            </div>
+                            <div class="pop_cs">
+                                <p>커뮤니케이션 담당자<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                    제휴사업팀 서윤호 프로 <a href="mailto:seoyh737@golfzon.com">seoyh737@golfzon.com</a></span></p>
                             </div>
                         </div>
                     </div><!--//cont8-->    
@@ -947,6 +979,10 @@
                                     </script>
 
                             </div>
+                            <div class="pop_cs">
+                                <p>커뮤니케이션 담당자<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                    제휴사업팀 이준희 프로 <a href="mailto:ljh@golfzon.com">ljh@golfzon.com</a></span></p>
+                            </div>
                         </div>
                     </div><!--//cont9-->   
                     <div class="pop_cont pop_cont10">
@@ -1025,6 +1061,10 @@
                                         })
                                     </script>
                             </div>
+                            <div class="pop_cs">
+                                <p>커뮤니케이션 담당자<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                    제휴사업팀 안승민 프로 <a href="mailto:headmin@golfzon.com">headmin@golfzon.com</a></span></p>
+                            </div>
                         </div>
                     </div><!--//cont10-->   
                     <div class="pop_cont pop_cont11">
@@ -1101,6 +1141,10 @@
                                             });
                                         })
                                     </script>
+                            </div>
+                            <div class="pop_cs">
+                                <p>커뮤니케이션 담당자<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                    제휴사업팀 서윤호 프로 <a href="mailto:seoyh737@golfzon.com">seoyh737@golfzon.com</a></span></p>
                             </div>
                         </div>
                     </div><!--//cont11-->
@@ -1179,6 +1223,10 @@
                                             });
                                         })
                                     </script>
+                            </div>
+                            <div class="pop_cs">
+                                <p>커뮤니케이션 담당자<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                    제휴사업팀 서윤호 프로 <a href="mailto:seoyh737@golfzon.com">seoyh737@golfzon.com</a></span></p>
                             </div>
                         </div>
                     </div><!--//cont12-->   
@@ -1265,6 +1313,10 @@
                                         })
                                     </script>
                             </div>
+                            <div class="pop_cs">
+                                <p>커뮤니케이션 담당자<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                    제휴사업팀 이준희 프로 <a href="mailto:ljh@golfzon.com">ljh@golfzon.com</a></span></p>
+                            </div>
                         </div>
                     </div><!--//cont13-->   
                     <div class="pop_cont pop_cont14">
@@ -1335,6 +1387,10 @@
                                     <img src="../../images/sub/img_marketing_pop_slide_26.png" alt="" />
                                 </div>
                             </div>
+                            <div class="pop_cs">
+                                <p>커뮤니케이션 담당자<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                    제휴사업팀 오태콘 프로 <a href="mailto:welldone82@golfzon.com">welldone82@golfzon.com</a></span></p>
+                            </div>
                         </div>
                     </div><!--//cont14-->   
                     <div class="pop_cont pop_cont15">
@@ -1397,6 +1453,10 @@
                                     <img src="../../images/sub/img_marketing_pop_slide_27.png" alt="" />
                                 </div>
                             </div>
+                            <div class="pop_cs">
+                                <p>커뮤니케이션 담당자<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                    제휴사업팀 이기쁨 프로 <a href="mailto:joylee1@golfzon.com">joylee1@golfzon.com</a></span></p>
+                            </div>
                         </div>
                     </div><!--//cont15-->   
                     <div class="pop_cont pop_cont16">
@@ -1412,7 +1472,7 @@
                                     </h2>
                                 <p class="pop_text">#스크린광고&nbsp;&nbsp;#홀이동광고</p>
                                 <div class="pop_info_img">
-                                    <img src="../../images/sub/img_marketing_pop_16.png" alt="" style="width: 829px;" />
+                                    <img src="../../images/sub/img_marketing_pop_16.png" alt="" />
                                 </div>
                                 <div class="pop_text_list">
                                     <dl style="margin-top:0">
@@ -1424,9 +1484,7 @@
                                     </dl>
                                     <dl>
                                         <dt>· 캠페인 진행사례</dt>
-                                        <dd style="margin-top:-8px">
-                                            크리스패션(마스터버니, 링스) 와이드앵글, 한성에프아이(테일러메이드, 레노마), <br />
-                                            유타골프웨어 등의 골프웨어 제품홍보를 위하여 <br />
+                                        <dd style="margin-top:-8px">크리스패션, 와이드앵글 등의 골프웨어 제품홍보를 위하여<br />  
                                             폐쇄된 공간에 큰 스크린을 활용하여 몰입도와 집중도가 높은 스크린 광고를 매년 집행하고 있습니다.
                                             <p style="margin-top:30px"><b>
                                                 - 15초 동영상 소재의 홀 입장 동영상 광고<br />  
@@ -1471,6 +1529,10 @@
                                             });
                                         })
                                     </script>
+                            </div>
+                            <div class="pop_cs">
+                                <p>커뮤니케이션 담당자<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                    제휴사업팀 안승민 프로 <a href="mailto:headmin@golfzon.com">headmin@golfzon.com</a></span></p>
                             </div>
                         </div>
                     </div><!--//cont16-->  
@@ -1556,6 +1618,10 @@
                                         })
                                     </script>
 
+                            </div>
+                            <div class="pop_cs">
+                                <p>커뮤니케이션 담당자<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                    제휴사업팀 이기쁨 프로 <a href="mailto:joylee1@golfzon.com">joylee1@golfzon.com</a></span></p>
                             </div>
                         </div>
                     </div><!--//cont17-->   
