--- a/sub/partnership/partnership.html
+++ b/sub/partnership/partnership.html
@@ -103,9 +103,9 @@
                         </div>
                         <div class="partnership_info_wrap">
                             <h3><span>01</span>국내 최다 골퍼 회원수 보유</h3>
-                            <div><img src="../../images/sub/img_partnership_info_1.png?ver=3" alt="" /></div>
+                            <div><img src="../../images/sub/img_partnership_info_1.png" alt="" /></div>
                             <h3><span>02</span>국내 최대 스크린골프 운영사</h3>
-                            <div><img src="../../images/sub/img_partnership_info_2.png?ver=3" alt="" /></div>
+                            <div><img src="../../images/sub/img_partnership_info_2.png" alt="" /></div>
                             <h3><span>03</span>스크린골프와 필드골프 혼용 시대!</h3>
                             <div><img src="../../images/sub/img_partnership_info_3.png" alt="" /></div>
                         </div>
@@ -113,10 +113,10 @@
                             <div class="partnership_info_wrap">
                                 <h2>골퍼를 타겟으로<br />골프존의 다양한 광고 영역을 통해 신규 코스를 홍보합니다.</h2>
                                 <p class="sub_text_p">골프존 시뮬레이터/웹/앱 광고영역에 골프장 신규 코스가 노출됩니다.</p>
-                                <h3 style="margin-top:130px"><span>사례</span>장수 CC (2022. 03. 29 런칭)</h3>
-                                <div><img src="../../images/sub/img_partnership_info_4.png?ver=3" alt="" /></div>
-                                <h3><span>사례</span>의령리온 CC (2022. 03. 29 런칭)</h3>
-                                <div><img src="../../images/sub/img_partnership_info_5.png?ver=3" alt="" /></div>
+                                <h3 style="margin-top:130px"><span>사례</span>360도 CC (2020.04.21 런칭)</h3>
+                                <div><img src="../../images/sub/img_partnership_info_4.png" alt="" /></div>
+                                <h3><span>사례</span>라싸 GC (2020.05.19 런칭)</h3>
+                                <div><img src="../../images/sub/img_partnership_info_5.png" alt="" /></div>
                             </div>
                         </div>
                         <div class="partnership_info_wrap" style="margin-top:150px">
@@ -140,8 +140,8 @@
                                 </p>
                                 <div style="margin-top:70px">
                                     <p style="font-size:19px;margin-bottom:20px;font-family:'Montserrat' !important;">Hot Line</p>
-                                    <p style="font-size:35px;margin-bottom:10px;font-family:'Montserrat' !important;">070-8640-6345</p>
-                                    <p style="font-size:35px;font-family:'Montserrat' !important;">070-8640-6038</p>
+                                    <p style="font-size:35px;margin-bottom:10px;font-family:'Montserrat' !important;">070-8660-3937</p>
+                                    <p style="font-size:35px;font-family:'Montserrat' !important;">070-8660-3982</p>
                                 </div>
                             </div>
                         </div>
@@ -160,9 +160,9 @@
                     <div class="tab2_content">
                         <div class="sub_title">
                             <h2>골프장 제휴현황</h2>
-                            <span>전국 257개의 골프장이 골프존과 함께 하고 있습니다.</span>
-                            <span style="font-size:15px;color:#252525;margin-top:20px">(*투비전 시스템 서비스 기준 / 2022.05.10 기준)</span>
-                            <div style="margin-top:100px"><img src="../../images/sub/img_partnership_info_7.png?ver=3" alt="" /></div>
+                            <span>전국 215개의 골프장이 골프존과 함께 하고 있습니다.</span>
+                            <span style="font-size:15px;color:#252525;margin-top:20px">(*투비전 시스템 서비스 기준 / 2020.07.10 기준)</span>
+                            <div style="margin-top:100px"><img src="../../images/sub/img_partnership_info_7.png" alt="" /></div>
                         </div>
                     </div>
                 </div><!--// tab2 -->
@@ -171,7 +171,7 @@
                         <div class="sub_title">
                             <h2>항공 촬영 사진 제공</h2>
                             <span>골프장에서 활용 가능한 3D 드론 항공촬영 사진 제공</span>
-                            <div style="margin-top:60px;margin-bottom:135px"><img src="../../images/sub/img_partnership_info_8.png" style="width: 768px;" alt="" /></div>
+                            <div style="margin-top:60px;margin-bottom:135px"><img src="../../images/sub/img_partnership_info_8.png" alt="" /></div>
                             <h2>3D 영상 및 이미지 제공</h2>
                             <span>18번홀 홀별 3D 버디뷰 및 클럽하우스 버디뷰 제공<br />홀별 코스 이미지 제공, 골프장 홈페이지 외 홍보 활용 가능</span>
                             <div style="margin-top:60px;margin-bottom:20px"><img src="../../images/sub/img_partnership_info_9.png" alt="" /></div>
@@ -183,13 +183,13 @@
                                 <h2>골프장 홍보</h2>
                                 <p class="sub_text_p">골프존 시뮬레이터/웹/앱을 통한 코스 홍보</p>
                                 <h3 style="margin-top:130px"><span>01</span>골프존 시뮬레이터 - 로딩창이미지 코스 오픈 사전 홍보</h3>
-                                <div><img src="../../images/sub/img_partnership_info_10.png?ver=2" alt="" style="width:1142px" /></div>
+                                <div><img src="../../images/sub/img_partnership_info_10.png" alt="" /></div>
                                 <h3><span>02</span>골프존 시뮬레이터 - 신규코스 탭</h3>
-                                <div><img src="../../images/sub/img_partnership_info_11.jpg?ver=2" alt="" style="width:768px" /></div>
+                                <div><img src="../../images/sub/img_partnership_info_11.png" alt="" /></div>
                                 <h3><span>03</span>골프존 닷컴</h3>
-                                <div><img src="../../images/sub/img_partnership_info_12.png?ver=2" alt="" /></div>
+                                <div><img src="../../images/sub/img_partnership_info_12.png" alt="" /></div>
                                 <h3><span>04</span>골프존 앱</h3>
-                                <div><img src="../../images/sub/img_partnership_info_13.png?ver=2" alt="" style="width:768px" /></div>
+                                <div><img src="../../images/sub/img_partnership_info_13.png" alt="" /></div>
                             </div>
                         </div>
                             <div class="partnership_info_wrap" style="margin-top:100px">
