--- a/sub/screen/ingame.html
+++ b/sub/screen/ingame.html
@@ -94,7 +94,7 @@
                     <div class="tab1_content">
                         <h3>전/후반 홀 입장 동영상 광고</h3>
                         <div class="movie_wrap">
-                            <iframe width="100%" height="675" src="https://www.youtube.com/embed/aHSHaP2LMug" frameborder="0" 
+                            <iframe width="100%" height="675" src="https://www.youtube.com/embed/596pICHroOc" frameborder="0" 
                             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                             </iframe>
                         </div>
@@ -105,19 +105,19 @@
                             </dl>
                             <dl>
                                 <dt>2</dt>
-                                <dd>노출시점<br /><span>[1홀 입장시 1-1 or 1-2] or <br>[10홀 입장시 10-1 or 10-2]</span></dd>
+                                <dd>노출시점<br /><span>1홀(전반 첫 홀)입장시,<br />10홀(후반 첫 홀)입장 시</span></dd>
                             </dl>
                             <dl>
                                 <dt>3</dt>
-                                <dd>노출확률 (판매방식)<br /><span>각 코스그룹별 독점 <br>(33% 확정 노출)</span></dd>
+                                <dd>노출확률 (판매방식)<br /><span>코스그룹별 독점(A~C 그룹)</span></dd>
                             </dl>
                             <dl>
                                 <dt>4</dt>
-                                <dd>노출량<br /><span>200만회</span></dd>
+                                <dd>노출량<br /><span>월평균 160만회</span></dd>
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>단가<br /><span>1개월 : 3,500만원</span></dd>
+                                <dd>단가<br /><span>2주 1,900만원<br />4주(1개월) : 3,500만원</span></dd>
                             </dl>
                         </div>
                         <div class="game_info_wrap">
@@ -140,7 +140,7 @@
                     <div class="tab1_content">
                         <h3>홀 이동 동영상 광고 세트</h3>
                         <div class="movie_wrap">
-                            <iframe width="100%" height="675" src="https://www.youtube.com/embed/UNEfEMdwsUc" frameborder="0" 
+                            <iframe width="100%" height="675" src="https://www.youtube.com/embed/8bCPG56LFtw" frameborder="0" 
                             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                             </iframe>
                         </div>
@@ -151,19 +151,19 @@
                             </dl>
                             <dl>
                                 <dt>2</dt>
-                                <dd>노출시점<br /><span>2, 4, 6, 8, 12, 14, 16, 18<br />홀 이동시(짝수홀 중 1개 홀)</span></dd>
+                                <dd>노출시점<br /><span>2, 5, 8, 12, 14, 16번<br />홀 이동시</span></dd>
                             </dl>
                             <dl>
                                 <dt>3</dt>
-                                <dd>노출확률 (판매방식)<br /><span>각 홀 코스그룹별 독점<br>(50% 확정 노출)</span></dd>
+                                <dd>노출확률 (판매방식)<br /><span>1개홀 독점</span></dd>
                             </dl>
                             <dl>
                                 <dt>4</dt>
-                                <dd>노출량<br /><span>300만회</span></dd>
+                                <dd>노출량<br /><span>월평균 450만회</span></dd>
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>단가<br /><span>1개월 : 1,800만원</span></dd>
+                                <dd>단가<br /><span>2주 1,500만원<br />4주(1개월) : 2,700만원</span></dd>
                             </dl>
                         </div>
                     </div>
@@ -175,7 +175,7 @@
                     <div class="tab1_content">
                         <h3>홀 이동 이미지 광고 세트</h3>
                         <div class="movie_wrap">
-                            <iframe width="100%" height="675" src="https://www.youtube.com/embed/JaY9ROnxEtw" frameborder="0" 
+                            <iframe width="100%" height="675" src="https://www.youtube.com/embed/AhKsHP9TRA0" frameborder="0" 
                             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                             </iframe>
                         </div>
@@ -186,19 +186,19 @@
                             </dl>
                             <dl>
                                 <dt>2</dt>
-                                <dd>노출시점<br /><span>1, 3, 5, 7, 11, 13, 15, 17<br />홀 이동시(홀수홀 중 1개 홀)</span></dd>
+                                <dd>노출시점<br /><span>3, 4, 6, 7, 9, 11, 13번,<br />15, 17, 18번홀 이동시</span></dd>
                             </dl>
                             <dl>
                                 <dt>3</dt>
-                                <dd>노출확률 (판매방식)<br /><span>각 홀 코스그룹별 독점<br>(50% 확정 노출)</span></dd>
+                                <dd>노출확률 (판매방식)<br /><span>1개홀 독점</span></dd>
                             </dl>
                             <dl>
                                 <dt>4</dt>
-                                <dd>노출량<br /><span>300만회</span></dd>
+                                <dd>노출량<br /><span>월평균 450만회</span></dd>
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>단가<br /><span>1개월 : 1,500만원</span></dd>
+                                <dd>단가<br /><span>2주 1,400만원<br />4주(1개월) : 2,500만원</span></dd>
                             </dl>
                         </div>
                     </div>
@@ -210,7 +210,7 @@
                     <div class="tab1_content">
                         <h3>동영상 가상광고</h3>
                         <div class="movie_wrap">
-                            <iframe width="100%" height="675" src="https://www.youtube.com/embed/Z2E8c1Hk8R0" frameborder="0" 
+                            <iframe width="100%" height="675" src="https://www.youtube.com/embed/31yGDsEr1tU" frameborder="0" 
                             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                             </iframe>
                         </div>
@@ -221,7 +221,7 @@
                             </dl>
                             <dl>
                                 <dt>2</dt>
-                                <dd>노출시점<br /><span>PAR 스코어 이상 기록으로 <br>홀아웃시 상시</span></dd>
+                                <dd>노출시점<br /><span>플레이 중 PAR 스코어<br />이상 기록시 상시</span></dd>
                             </dl>
                             <dl>
                                 <dt>3</dt>
@@ -229,11 +229,11 @@
                             </dl>
                             <dl>
                                 <dt>4</dt>
-                                <dd>노출량<br /><span>650만회</span></dd>
+                                <dd>노출량<br /><span>월평균 410만회</span></dd>
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>단가<br /><span>1개월 : 2,000만원</span></dd>
+                                <dd>단가<br /><span>2주 800만원<br />4주(1개월) : 1,500만원</span></dd>
                             </dl>
                         </div>
                     </div>
@@ -256,19 +256,19 @@
                             </dl>
                             <dl>
                                 <dt>2</dt>
-                                <dd>노출시점<br /><span>오잘공, 리플레이, <br>오늘의 나스모 기록시 상시</span></dd>
+                                <dd>노출시점<br /><span>플레이 중 오잘공,<br />리플레이 영상,<br />오늘의 나스모 기록시 상시</span></dd>
                             </dl>
                             <dl>
                                 <dt>3</dt>
-                                <dd>노출확률 (판매방식)<br /><span>5구좌 롤링<br>(20% 확률 노출)</span></dd>
+                                <dd>노출확률 (판매방식)<br /><span>25%(4구좌 롤링)</span></dd>
                             </dl>
                             <dl>
                                 <dt>4</dt>
-                                <dd>노출량<br /><span>6,000만회</span></dd>
+                                <dd>노출량<br /><span>월평균 4,500만회</span></dd>
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>단가<br /><span>1개월 : 2,000만원</span></dd>
+                                <dd>단가<br /><span>2주 1,100만원<br />4주(1개월) : 2,000만원</span></dd>
                             </dl>
                         </div>
                     </div>
